[workspace]
members = ["lib", "runtime"]
resolver = "2"

[workspace.dependencies]
byteorder = { version = "1.5", default-features = false }
smoltcp = { version = "0.11", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "defmt",
] }
defmt = { version = "0.3" }
