[package]
name = "profinet-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
defmt = { version = "0.3" }
byteorder = { version = "1.5", default-features = false }
smoltcp = { version = "0.11", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "defmt",
] }
num_enum = { version = "0.7", default-features = false, features = [
    "complex-expressions",
] }
