[package]
name = "profinet-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
defmt = { version = "0.3" }
byteorder = { version = "1.5", default-features = false }
smoltcp = { version = "0.11", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "defmt",
] }
num_enum = { version = "0.7", default-features = false, features = [
    "complex-expressions",
] }
stm32-eth = { version = "0.6", features = [
    "stm32f439",
    "smoltcp-phy",
    "defmt",
] }
stm32f4xx-hal = { version = "0.20", features = ["stm32f439", "defmt"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"

[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
