[package]
name = "profinet-rs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = { version = "0.7", default-features = false, features = [
    "complex-expressions",
] }
byteorder = { version = "1.5", default-features = false }
zerocopy = { version = "0.7", default-features = false, features = [
    "byteorder",
    "derive",
] }
smoltcp.workspace = true
